--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "CC BY-NC-SA 4.0",
     "keywords": ["totp", "2fa", "mfa", "authenticate"],
     "require": {
-        "php": "^5.6 || ^7.0"
+        "php": "^5.6 || ^7.0",
+        "beberlei/assert": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "@stable",
