--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
+/composer.lock export-ignore
 /phpunit.xml.dist export-ignore
