--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
     bootstrap="./test/config/bootstrap.php" backupGlobals="false" verbose="true" colors="true">
 
     <testsuites>
-        <testsuite name="range">
+        <testsuite name="totp">
             <directory suffix="Test.php">./test</directory>
         </testsuite>
     </testsuites>
