--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "@stable",
-        "satooshi/php-coveralls": "~1.0",
-        "squizlabs/php_codesniffer": "~2.5",
-        "phpmd/phpmd": "~2.0",
+        "satooshi/php-coveralls": "^1.0",
+        "squizlabs/php_codesniffer": "^3.0",
+        "phpmd/phpmd": "^2.0",
         "phpmetrics/phpmetrics": "*"
     },
     "autoload": {
