--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "license": "CC BY-NC-SA 4.0",
     "keywords": ["totp", "2fa", "mfa", "authenticate"],
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^7.0",
         "beberlei/assert": "^2.5"
     },
     "require-dev": {
-        "phpunit/phpunit":           "^5.0",
+        "phpunit/phpunit":           "^6.0",
         "satooshi/php-coveralls":    "@stable",
         "squizlabs/php_codesniffer": "@stable",
         "phpmd/phpmd":               "@stable",
@@ -23,7 +23,7 @@
         "psr-4": { "texdc\\totp\\test\\": "test/" }
     },
     "config": {
-        "platform": { "php": "5.6" },
+        "platform": { "php": "7.0" },
         "preferred-install": "dist"
     },
     "scripts": {
